--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "author": "大板栗 <laibinzhuan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^9.6.0",
+    "css-loader": "^3.0.0",
+    "cssnano": "^4.1.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-background-image-auto-size": "^1.0.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-px-to-viewport": "^1.1.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "tslib": "^1.10.0",
     "tslint": "^5.18.0",
