--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "webpack project template",
   "main": "index.js",
+  "types": "src/types/index.d.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --mode=development",
     "dev": "NODE_ENV=development webpack -w --config webpack.config.js --mode=development",
@@ -11,23 +12,26 @@
   "author": "大板栗 <laibinzhuan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.6.0",
-    "css-loader": "^3.0.0",
+    "autoprefixer": "^9.7.1",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "postcss-background-image-auto-size": "^1.0.2",
     "postcss-loader": "^3.0.0",
-    "postcss-px-to-viewport": "^1.1.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.4",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-sassy-mixins": "^2.1.0",
+    "precss": "^4.0.0",
+    "style-loader": "^1.0.0",
+    "sudo": "^1.0.3",
+    "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2",
-    "url-loader": "^2.0.1",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
