--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
+    "get-host": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-background-image-auto-size": "^1.0.2",
@@ -24,7 +25,6 @@
     "postcss-sassy-mixins": "^2.1.0",
     "precss": "^4.0.0",
     "style-loader": "^1.0.0",
-    "sudo": "^1.0.3",
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
     "tslint": "^5.20.1",
